[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros", "query"] }
tokio = { version = "1.43.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
tower = "0.5.2"
serde = { version = "1.0.218", features = ["derive"] }
axum-macros = { version = "0.3.0-rc.3" }
bon = "3.3.2"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
tower_governor = "0.6.0"
